@@ -1,7 +1,6 @@
 package org.openlca.core.database.usage;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
@@ -19,20 +18,12 @@ import org.openlca.core.model.descriptors.RootDescriptor;
  * process can be used in product systems as quantitative reference or in
  * process links.
  */
-public class ExchangeUseSearch {
-
-	private IDatabase database;
-	private Process process;
-
-	public ExchangeUseSearch(IDatabase database, Process process) {
-		this.database = database;
-		this.process = process;
-	}
+public record ExchangeUseSearch(IDatabase database, Process process) {
 
 	public List<RootDescriptor> findUses(Exchange exchange) {
 		if (exchange == null)
 			return Collections.emptyList();
-		return findUses(Arrays.asList(exchange));
+		return findUses(List.of(exchange));
 	}
 
 	public List<RootDescriptor> findUses(List<Exchange> exchanges) {
@@ -46,18 +37,17 @@ public class ExchangeUseSearch {
 		}
 		Set<Long> systemIds = new HashSet<>();
 		systemIds.addAll(Search.on(database).queryForIds(
-				getProductSystemQuery(flowIds)));
+			getProductSystemQuery(flowIds)));
 		systemIds.addAll(Search.on(database).queryForIds(
-				ModelType.PRODUCT_SYSTEM, ids, "f_reference_exchange"));
+			ModelType.PRODUCT_SYSTEM, ids, "f_reference_exchange"));
 		return new ArrayList<>(
-				new ProductSystemDao(database).getDescriptors(systemIds));
+			new ProductSystemDao(database).getDescriptors(systemIds));
 	}
 
 	private String getProductSystemQuery(Set<Long> flowIds) {
-		String query = "SELECT DISTINCT f_product_system FROM tbl_process_links "
-				+ "WHERE (f_provider = " + process.id
-				+ " OR f_process = " + process.id + ")"
-				+ "AND f_flow IN " + Search.asSqlList(flowIds);
-		return query;
+		return "SELECT DISTINCT f_product_system FROM tbl_process_links "
+			+ "WHERE (f_provider = " + process.id
+			+ " OR f_process = " + process.id + ")"
+			+ "AND f_flow IN " + Search.asSqlList(flowIds);
 	}
 }
